# plugcli

./: .autorelease.yml  .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  autorelease-env.sh  autorelease.yml  setup.cfg
.github/workflows/: autorelease-default-env.sh  autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml  ci.yml
plugcli/: cli.py  params.py  plugin_management.py
plugcli/tests/: test_cli.py  test_params.py  test_plugin_management.py
plugcli/tests/plugin_examples/: exampleA.py  exampleB.py
