[metadata]
name = plugcli
version = 0.1.0
short_description = Plugin based CLI framework built on click
description = Plugin based CLI framework built on click
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
license = MIT
license_file = LICENSE
author_email = dwhs@hyperblazer.net
url = https://github.com/dwhswenson/plugcli
classifiers = 
    License :: OSI Approved :: MIT License

[options]
install_requires =
    click
packages = find:
